--- a/resume.html
+++ b/resume.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
-    <link rel="stylesheet" href="../startbootstrap-clean-blog-gh-pages/css/mystyles.css">
-    <link rel="stylesheet" href="../startbootstrap-clean-blog-gh-pages/css/layoutstyles.css">
+    <link rel="stylesheet" href="mystyles.css">
+    <link rel="stylesheet" href="layoutstyles.css">
 </head>
 <body>
 
